Добавил Docker файлы и собрал docker-compose

--- a/docker-compose.prod.env
+++ b/docker-compose.prod.env
@@ -1,10 +1,12 @@
 
 # MongoDB data
-MONGODB_USERNAME=admin
-MONGODB_PASSWORD=adminpass
-MONGODB_HOSTNAME=localhost
-MONGODB_NAME=test
-MONGODB_PORT=27017
+MONGO_ROOT_USER=admin
+MONGO_ROOT_PASSWORD=adminpass
+MONGO_DATABASE=test
+
+MONGOEXPRESS_LOGIN=admin
+MONGOEXPRESS_PASSWORD=adminpass
+MONGOEXPRESS_AUTH_DATABASE=admin
 
 # Server data
 SERVER_PORT=3000
