--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,9 @@ version: '3'
 services:
   mongo:
     image: mongo
+    restart: always
+    env_file:
+      - ./docker-compose.prod.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
@@ -12,6 +15,9 @@ services:
       
   mongo-express:
     image: mongo-express
+    restart: always
+    env_file:
+      - ./docker-compose.prod.env
     environment:
         - ME_CONFIG_MONGODB_SERVER=mongo
         - ME_CONFIG_MONGODB_PORT=27017
@@ -27,8 +33,20 @@ services:
       - 8081:8081
 
   nodejsapp:
-   build: .
-   environment:
-    - MONGO_URL=mongodb://mongo:27017/${MONGO_DATABASE}
-    - MONGO_ROOT_USER=${MONGO_ROOT_USER}
-    
+    build: .
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - 3000:3000
+    env_file:
+      - ./docker-compose.prod.env
+    environment:
+      - MONGODB_USERNAME=${MONGO_ROOT_USER}
+      - MONGODB_PASSWORD=${MONGO_ROOT_PASSWORD}
+      - MONGODB_HOSTNAME=mongo
+      - MONGODB_NAME=${MONGO_DATABASE}
+      - MONGODB_PORT=27017
+      - SERVER_PORT=3000
+      - BLOCKCYPHER_TOKEN=${BLOCKCYPHER_TOKEN}
+      - WEBHOOK_ENDPOINT=${WEBHOOK_ENDPOINT}
