--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
     "body-parser": "^1.20.2",
@@ -12,9 +13,12 @@
     "ethereumjs-wallet": "^1.0.2",
     "ethers": "^6.12.1",
     "express": "^4.19.2",
+    "js-sha3": "^0.9.3",
+    "litecore-lib": "^0.13.22",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0",
+    "ripemd160-js": "^2.0.2",
     "seed-phrase-generator": "^1.2.7",
     "sequelize": "^6.37.3",
     "tiny-secp256k1": "^2.2.3"
