--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
+    "bitcore-lib": "^10.0.28",
+    "bitcore-mnemonic": "^10.0.28",
     "body-parser": "^1.20.2",
     "coinbase": "^2.0.8",
     "crypto-js": "^4.2.0",
