Documentation for the application

--- a/docker-compose.prod.env
+++ b/docker-compose.prod.env
@@ -1,18 +1,17 @@
 
-# MongoDB data
-MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=adminpass
-MONGO_DATABASE=test
-
-MONGOEXPRESS_LOGIN=admin
-MONGOEXPRESS_PASSWORD=adminpass
-MONGOEXPRESS_AUTH_DATABASE=admin
-
-# Server data
+# Server
 SERVER_PORT=3000
 
-# BLOCKCYPHER data
-BLOCKCYPHER_TOKEN=bc62a93cec824e2abb424f6c2dd9c703
 
-# Webhook data
-WEBHOOK_ENDPOINT=http://37.46.133.209:8081/
+# Database
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_HOSTNAME=
+MONGODB_NAME=
+MONGODB_PORT=
+
+# BlockCypher
+BLOCKCYPHER_TOKEN=
+
+# Webhook
+WEBHOOK_ENDPOINT=
