--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.6.8",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
+    "bip84": "^0.2.7",
     "bitcoinjs-lib": "^6.1.5",
     "bitcore-lib": "^10.0.28",
     "bitcore-mnemonic": "^10.0.28",
@@ -12,10 +13,12 @@
     "dotenv": "^16.4.5",
     "ecpair": "^2.1.0",
     "elliptic": "^6.5.5",
+    "ethereum-bip84": "^0.0.3",
     "ethereumjs-wallet": "^1.0.2",
     "ethers": "^6.12.1",
     "express": "^4.19.2",
     "js-sha3": "^0.9.3",
+    "litecoin-bip84": "^0.0.5",
     "litecore-lib": "^0.13.22",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
