--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tiny-secp256k1": "^2.2.3"
   },
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/app.js",
+    "test" : "mocha test/*.test.js"
   },
   "devDependencies": {
     "mocha": "^10.4.0"
